Initial commit - I took the Tiamat branch with vehicle registry integrated, split it into a separate Sobek project and essentially removed all the Stop place code from it. There may still be some traces of the Stop place part, but mostly this is "Vehicle registry only"